Add console log for tab setup completion

--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@ html.dark .badge-pri{background:rgba(74,222,128,.15)}
     });
   }
   setupTabs('resNavPills','res-tab');
+  console.log('Tab setup complete');
 
   // ===== ROOM SELECT POPULATION =====
   function getRoomOptions() {
