Update password requirements message in index.html

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ html.dark .badge-pri{background:rgba(74,222,128,.15)}
         </div>
         <button type="submit" class="btn btn-pri" id="loginBtn" style="width:100%;justify-content:center"><i class="fas fa-sign-in-alt"></i> Unlock</button>
       </form>
-      <p style="margin-top:12px;font-size:.72rem;color:var(--txt3)">Max 12 characters. Letters, numbers &amp; special characters allowed.<br>Default: Admin@2025!</p>
+      <p style="margin-top:12px;font-size:.72rem;color:var(--txt3)">Min 12 characters. &amp; YOU<br>I watching you trying to Login</p>
     </div>
   </div>
 
