Update house rules and inspection procedures

--- a/index.html
+++ b/index.html
@@ -200,33 +200,35 @@ html.dark .badge-info{background:rgba(37,99,235,.2)}
         <ol>
           <li>All residents must treat each other, staff, and property with respect.</li>
           <li>Noise must be kept to acceptable levels, especially between 22:00 and 06:00.</li>
+          <li> Curfew is 2000hrs, the gates will be locked, and Dogs will be set free roam the yard.</li>
           <li>No illegal substances, weapons, or dangerous items are permitted on the premises.</li>
           <li>Visitors must be signed in and out at reception and are not permitted overnight without prior approval.</li>
         </ol>
         <h4>2. Room &amp; Property Care</h4>
         <ol>
           <li>Residents are responsible for keeping their rooms clean and tidy.</li>
-          <li>No alterations may be made to rooms (painting, drilling, etc.) without written permission.</li>
+          <li>The Kitchen, toilets and common area must always be clean. Practice clean as you go principle.</li>
+          <li>No alterations may be made to rooms (painting, drilling, etc.).</li>
           <li>Any damage must be reported immediately and may result in charges.</li>
           <li>Room inspections may be conducted with 24 hours' notice.</li>
         </ol>
         <h4>3. Safety &amp; Security</h4>
         <ol>
           <li>Doors must be locked when leaving. Lost keys must be reported immediately (replacement fee applies).</li>
-          <li>Fire exits must remain clear. Tampering with safety equipment is a serious offence.</li>
+          <li>Tampering with safety equipment is a serious offence.</li>
           <li>Report suspicious activity or safety concerns to management immediately.</li>
         </ol>
         <h4>4. Payments &amp; Utilities</h4>
         <ol>
           <li>Rent is due on the 1st of each month. Late payments incur a penalty.</li>
           <li>Electricity and water are shared resources — excessive usage may be individually billed.</li>
-          <li>Deposits are refundable upon satisfactory room inspection at check-out.</li>
+          <li>.....</li>
         </ol>
         <h4>5. Check-Out Procedures</h4>
         <ol>
           <li>Written notice of departure must be given at least 14 days in advance.</li>
           <li>All keys must be returned. Room must be cleaned and cleared of personal belongings.</li>
-          <li>A final inspection will be conducted before deposit refund processing.</li>
+          <li>A final inspection will be conducted before residents check-out.</li>
         </ol>
       </div>
       <form id="rulesForm" onsubmit="return handleRulesAccept(event)">
